--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,9 @@
-
+#qut{
+	max-width:600px;
+	margin:10px;
+    padding:15px;
+    border-left:8px solid green;
+    Background-color:#f8fffe;
+    Font-weight: Bold;
+}
 /* Your CSS Code here. */
