--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 	max-width:600px;
 	margin:10px;
     padding:15px;
-    border-left:8px solid green;
+    border-left:8px solid rgb(0, 128, 0);
     Background-color:#f8fffe;
-    Font-weight: Bold;
+    Font-weight: bold;
 }
 /* Your CSS Code here. */
